erp/erp-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-server-deployment
  namespace: erp
  labels:
    app: erp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erp-server
  template:
    metadata:
      labels:
        app: erp-server
    spec:
      containers:
      - name: erp-server
        image: yakovda/erp-server:1.1.0
        ports:
        - containerPort: 5000
