erp/erp-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-client-service
  namespace: erp
spec:
  selector:
    app: erp-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
