erp/erp-server-ex-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-server-service-external
  namespace: default
spec:
  type: ExternalName
  externalName: erp-server-service.erp.svc.cluster.local
  ports:
    - port: 5000
