erp/erp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-ingress
spec:
  ingressClassName: "nginx-2"
  rules:
  - host: a3c83ed3f2ab943bbb0be8267211fdcf-906781797.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:  
            name: erp-server-service
            port:  
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: erp-client-service
            port:
              number: 80
